shepherd 1.0.2 --help: warning: call to environ while multiple threads are running; further behavior unspecified.

  • Done
  • quality assurance status badge
Details
3 participants
  • Ludovic Courtès
  • Simon Josefsson
  • Tomas Volf
Owner
unassigned
Submitted by
Simon Josefsson
Severity
normal

Debbugs page

Simon Josefsson wrote 3 weeks ago
(address . bug-guix@gnu.org)
87bjv1lruw.fsf@josefsson.org
Hi

It seems shepherd in Debian print the following on a simple --help:

132s warning: call to environ while multiple threads are running;
132s further behavior unspecified.

I can't find the error message in guile-fibers or shepherd source code.
Any ideas where it comes from and how to fix it?

Version 1.0.0:

Version 1.0.2:

/Simon
-----BEGIN PGP SIGNATURE-----

iQNoBAEWCAMQFiEEo8ychwudMQq61M8vUXIrCP5HRaIFAmeyILcUHHNpbW9uQGpv
c2Vmc3Nvbi5vcmfCHCYAmDMEXJLOtBYJKwYBBAHaRw8BAQdACIcrZIvhrxDBkK9f
V+QlTmXxo2naObDuGtw58YaxlOu0JVNpbW9uIEpvc2Vmc3NvbiA8c2ltb25Aam9z
ZWZzc29uLm9yZz6IlgQTFggAPgIbAwULCQgHAgYVCAkKCwIEFgIDAQIeAQIXgBYh
BLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgIBQkLehFUAAoJENc89jjFPAa+CboA
+wUa06RD5e5VTCxvSWtPS75Wq2qBeYGZnf0jvUMxa2n4AP4xkUeAPPnNuMsTm2fs
FCDIGaEM2Yn6Vb2huzzT1Fw/BLgzBFySz4EWCSsGAQQB2kcPAQEHQOxTCIOaeXAx
I2hIX4HK9bQTpNVei708oNr1Klm8qCGKiPUEGBYIACYCGwIWIQSx0r0Tdb7LeEz0
+MTXPPY4xTwGvgUCZf2IKwUJC3oQqgCBdiAEGRYIAB0WIQSjzJyHC50xCrrUzy9R
cisI/kdFogUCXJLPgQAKCRBRcisI/kdFoqdMAQCgH45aseZgIrwKOvUOA9QfsmeE
8GZHYNuFHmM9FEQS6AD6A4x5aYvoY6lo98pgtw2HPDhmcCXFItjXCrV4A0GmJA4J
ENc89jjFPAa+GcYA/26YQY05bLtnXiIjTiAzrGQrRXxTHPA8Av7TDFHvIetWAP9s
HSoU8OfTwmTiEnGwLlsV7QJclZg3YNz/Ypcp9TqQBrg4BFySz2oSCisGAQQBl1UB
BQEBB0AxlRumDW6nZY7A+VCfek9VpEx6PJmdJyYPt3lNHMd6HAMBCAeIfgQYFggA
JgIbDBYhBLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgwBQkLehDGAAoJENc89jjF
PAa+phoA/jrDqIrl/55vUMBhIQv+TP635d2iCTEnyFmbUcP9+gh6APoDsXalVd2c
OGxQtSC+TF8PkZMn1TLkJKAjVxr+xx40AgAKCRBRcisI/kdFougyAP41NN2amVTG
nF3QlfQT0Fa3AeN7RtQ2rCuYDM2n4Rv5JwD+O4Mwlue5hmxyVyKNk6BQ8D45hnT1
VtJka/y0V8h3kA0=
=OWCC
-----END PGP SIGNATURE-----

Tomas Volf wrote 3 weeks ago
(name . Simon Josefsson via Bug reports for GNU Guix)(address . bug-guix@gnu.org)
87wmdp36ry.fsf@wolfsden.cz
Simon Josefsson via Bug reports for GNU Guix <bug-guix@gnu.org> writes:

Toggle quote (10 lines)
> Hi
>
> It seems shepherd in Debian print the following on a simple --help:
>
> 132s warning: call to environ while multiple threads are running;
> 132s further behavior unspecified.
>
> I can't find the error message in guile-fibers or shepherd source code.
> Any ideas where it comes from

Guile itself, libguile/posix.c.

Toggle snippet (10 lines)
libguile/posix.c
1724- if (scm_ilength (scm_all_threads ()) != 1)
1725- scm_display
1726- (scm_from_latin1_string
1727: ("warning: call to environ while multiple threads are running;\n"
1728- " further behavior unspecified.\n"),
1729- scm_current_warning_port ());
1730-

Toggle quote (2 lines)
> and how to fix it?

Do not call (environ) when multiple threads are running, but I assume
that is not actually helpful advice. :)

Toggle quote (10 lines)
>
> Version 1.0.0:
> https://ci.debian.net/packages/s/shepherd/testing/amd64/57880388/
>
> Version 1.0.2:
> https://salsa.debian.org/debian/shepherd/-/jobs/7101207#L718
>
> /Simon
>

--
There are only two hard things in Computer Science:
cache invalidation, naming things and off-by-one errors.
-----BEGIN PGP SIGNATURE-----

iQJCBAEBCgAsFiEEt4NJs4wUfTYpiGikL7/ufbZ/wakFAmeyW/EOHH5Ad29sZnNk
ZW4uY3oACgkQL7/ufbZ/wanNoxAApCPR0MbR19k0h2Du6LzU2zUVVd7ZDYzIdNlP
m+OPDrAN9QzV3PO+vclreoStxswcn4fx4CrbbUghYsK5VUI8uIHPiSb+m5gb1VQZ
sxsHSMOATWYkOWDwigsyJ17Z7El6AD7c3d7NQO0vuUkiw1rk43FyhgRW28Vbll+D
DfX7tFa0RYxv+QKnDQyaOwHbBLEhZiNZmtXEtL/SgA6iaPj0FqARr/XkktFiTobV
MIseTJbtRsJXRtJm2oBTdNyMA0YEQfULVXOXSlEzuaI4Oq41JuTWOAQ7eZXnpbgx
iMoB8+wE/H3IHWgCV7c8vP6jrUbNofPgNr6EN1QuhLOa/NkyEP4bo3kAkAeEMrzz
u/gPEGJONfxSPKLrOBeKCXOj8RrFHiGj6dt3cNShcXOA6+0c4c529ohE55M8QAcJ
X+VvHwzCNtH7jtnQ32OODGBCqCHSedwBI+SB+kpcqBYEK42MAz3w3d2+TvZaPJ3V
xliYcwwQ2hlOSJzY++3vwP6Km1NAjqR5zPZ9U7YkIHW2l4wPj9X5GUF0IbbZPeOs
P177qfMuMFY2yWGJ2ilqlCEvjlYVs0PZyy+MrJp4L+4Cf4O6S+QqPHd6q7SQa7q3
Y1qvLFeKbw8TcQr4V+G0TiwzPhxcDpP0YI2mEU8ez+m6YLDZ6MzhuUfEEuIod/9v
fnF2urg=
=BMYh
-----END PGP SIGNATURE-----

Simon Josefsson wrote 3 weeks ago
(name . Tomas Volf)(address . ~@wolfsden.cz)
87tt8th3d1.fsf@josefsson.org
Tomas Volf <~@wolfsden.cz> writes:

Toggle quote (28 lines)
> Simon Josefsson via Bug reports for GNU Guix <bug-guix@gnu.org> writes:
>
>> Hi
>>
>> It seems shepherd in Debian print the following on a simple --help:
>>
>> 132s warning: call to environ while multiple threads are running;
>> 132s further behavior unspecified.
>>
>> I can't find the error message in guile-fibers or shepherd source code.
>> Any ideas where it comes from
>
> Guile itself, libguile/posix.c.
>
> libguile/posix.c
> 1724- if (scm_ilength (scm_all_threads ()) != 1)
> 1725- scm_display
> 1726- (scm_from_latin1_string
> 1727: ("warning: call to environ while multiple threads are running;\n"
> 1728- " further behavior unspecified.\n"),
> 1729- scm_current_warning_port ());
> 1730-
>
>> and how to fix it?
>
> Do not call (environ) when multiple threads are running, but I assume
> that is not actually helpful advice. :)

Thank you for the pointer. Interesting - why isn't this triggered on
Guix but only when building shepherd on a foreign distribution like
Debian?

Is the message really correct? I thought guile-fibers and shepherd did
not use threads at all.

If it is possible to make --help and --version avoid launching new
threads, that would be nice to resolve this warning for at least the
simple use-case of doing --help and --version.

/Simon

Toggle quote (9 lines)
>>
>> Version 1.0.0:
>> https://ci.debian.net/packages/s/shepherd/testing/amd64/57880388/
>>
>> Version 1.0.2:
>> https://salsa.debian.org/debian/shepherd/-/jobs/7101207#L718
>>
>> /Simon
>>
-----BEGIN PGP SIGNATURE-----

iQNoBAEWCAMQFiEEo8ychwudMQq61M8vUXIrCP5HRaIFAmeydboUHHNpbW9uQGpv
c2Vmc3Nvbi5vcmfCHCYAmDMEXJLOtBYJKwYBBAHaRw8BAQdACIcrZIvhrxDBkK9f
V+QlTmXxo2naObDuGtw58YaxlOu0JVNpbW9uIEpvc2Vmc3NvbiA8c2ltb25Aam9z
ZWZzc29uLm9yZz6IlgQTFggAPgIbAwULCQgHAgYVCAkKCwIEFgIDAQIeAQIXgBYh
BLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgIBQkLehFUAAoJENc89jjFPAa+CboA
+wUa06RD5e5VTCxvSWtPS75Wq2qBeYGZnf0jvUMxa2n4AP4xkUeAPPnNuMsTm2fs
FCDIGaEM2Yn6Vb2huzzT1Fw/BLgzBFySz4EWCSsGAQQB2kcPAQEHQOxTCIOaeXAx
I2hIX4HK9bQTpNVei708oNr1Klm8qCGKiPUEGBYIACYCGwIWIQSx0r0Tdb7LeEz0
+MTXPPY4xTwGvgUCZf2IKwUJC3oQqgCBdiAEGRYIAB0WIQSjzJyHC50xCrrUzy9R
cisI/kdFogUCXJLPgQAKCRBRcisI/kdFoqdMAQCgH45aseZgIrwKOvUOA9QfsmeE
8GZHYNuFHmM9FEQS6AD6A4x5aYvoY6lo98pgtw2HPDhmcCXFItjXCrV4A0GmJA4J
ENc89jjFPAa+GcYA/26YQY05bLtnXiIjTiAzrGQrRXxTHPA8Av7TDFHvIetWAP9s
HSoU8OfTwmTiEnGwLlsV7QJclZg3YNz/Ypcp9TqQBrg4BFySz2oSCisGAQQBl1UB
BQEBB0AxlRumDW6nZY7A+VCfek9VpEx6PJmdJyYPt3lNHMd6HAMBCAeIfgQYFggA
JgIbDBYhBLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgwBQkLehDGAAoJENc89jjF
PAa+phoA/jrDqIrl/55vUMBhIQv+TP635d2iCTEnyFmbUcP9+gh6APoDsXalVd2c
OGxQtSC+TF8PkZMn1TLkJKAjVxr+xx40AgAKCRBRcisI/kdFoibhAP9aScsnfmvw
pkst6/CL4Q+AXdccxBjqPnedNMY5sIxrDgD8C6lgWfh8aYiYz4HtmHHIL7KTdfsQ
J+B32q6pHWCLvgE=
=fIG+
-----END PGP SIGNATURE-----

Ludovic Courtès wrote 2 weeks ago
(name . Simon Josefsson)(address . simon@josefsson.org)(address . 76343@debbugs.gnu.org)
87frk03dss.fsf@gnu.org
Hi,

Simon Josefsson <simon@josefsson.org> skribis:

Toggle quote (5 lines)
> It seems shepherd in Debian print the following on a simple --help:
>
> 132s warning: call to environ while multiple threads are running;
> 132s further behavior unspecified.

This is a bug introduced in Guile 3.0.10 (Guix still uses 3.0.9), for
which I’ve now sent a patch:


Olivier Dion submitted another patch, which complements the one above:


Thanks,
Ludo’.
Simon Josefsson wrote 2 weeks ago
(name . Ludovic Courtès)(address . ludo@gnu.org)(address . 76343@debbugs.gnu.org)
270FEE5B-1373-4060-92BC-B205BF867948@josefsson.org
Thank you! Does this make shepherd Debian packages useless, or can we suggest people to ignore the warning? Any simple way to patch it out from within shepherd? The Debian freeze is in two weeks and it would be nice to give a good first impression to people try it shepherd from Debian… i could try to get guile patched, but it is getting late.

/Simon

Toggle quote (22 lines)
> 26 feb. 2025 kl. 16:51 skrev Ludovic Courtès <ludo@gnu.org>:
>
> Hi,
>
> Simon Josefsson <simon@josefsson.org> skribis:
>
>> It seems shepherd in Debian print the following on a simple --help:
>>
>> 132s warning: call to environ while multiple threads are running;
>> 132s further behavior unspecified.
>
> This is a bug introduced in Guile 3.0.10 (Guix still uses 3.0.9), for
> which I’ve now sent a patch:
>
> https://issues.guix.gnu.org/76589
>
> Olivier Dion submitted another patch, which complements the one above:
>
> https://lists.gnu.org/archive/html/guile-devel/2025-02/msg00036.html
>
> Thanks,
> Ludo’.
Ludovic Courtès wrote 2 weeks ago
(name . Simon Josefsson)(address . simon@josefsson.org)(address . 76343@debbugs.gnu.org)
871pvjwdym.fsf@gnu.org
Hi Simon,

Simon Josefsson <simon@josefsson.org> skribis:

Toggle quote (2 lines)
> Thank you! Does this make shepherd Debian packages useless, or can we suggest people to ignore the warning? Any simple way to patch it out from within shepherd? The Debian freeze is in two weeks and it would be nice to give a good first impression to people try it shepherd from Debian… i could try to get guile patched, but it is getting late.

A simple way would be to patch out the ‘environ’ warning in Guile: it
didn’t exist before 3.0.10, it’s bogus (it fires even when you’re not
mutating the environment and even with just a single user thread, as is
the case here), and the comment itself doesn’t change program behavior.

If that’s not adequate, we could try and come up with a quick hack for
shepherd to avoid the ‘environ’ call at the top-level (though that’s
probably not something I would consider for inclusion in the Shepherd
proper.)

WDYT?

Ludo’.
Simon Josefsson wrote 1 weeks ago
(name . Ludovic Courtès)(address . ludo@gnu.org)(address . 76343@debbugs.gnu.org)
ed0ebcbceec6108ae89725c79e6a9737862e05bb.camel@josefsson.org
tor 2025-02-27 klockan 17:26 +0100 skrev Ludovic Courtès:
Toggle quote (24 lines)
> Hi Simon,
>
> Simon Josefsson <simon@josefsson.org> skribis:
>
> > Thank you! Does this make shepherd Debian packages useless, or can
> > we suggest people to ignore the warning? Any simple way to patch it
> > out from within shepherd? The Debian freeze is in two weeks and it
> > would be nice to give a good first impression to people try it
> > shepherd from Debian… i could try to get guile patched, but it is
> > getting late.
>
> A simple way would be to patch out the ‘environ’ warning in Guile: it
> didn’t exist before 3.0.10, it’s bogus (it fires even when you’re not
> mutating the environment and even with just a single user thread, as
> is
> the case here), and the comment itself doesn’t change program
> behavior.
>
> If that’s not adequate, we could try and come up with a quick hack
> for
> shepherd to avoid the ‘environ’ call at the top-level (though that’s
> probably not something I would consider for inclusion in the Shepherd
> proper.)

A shephard-specific patch would be the simplest at this point, I think.
 
Do you have some idea how to do that? I agree it seems like a Debian-
specific patch for now.

OTOH, maybe this is not critical. It is a stderr warning message. But
it does look ugly, and may give a bad first impression for Debian
people migrating towards Guix.

/Simon
-----BEGIN PGP SIGNATURE-----

iQNTBAAWCAL7FiEEo8ychwudMQq61M8vUXIrCP5HRaIFAmfHCPbCHCYAmDMEXJLO
tBYJKwYBBAHaRw8BAQdACIcrZIvhrxDBkK9fV+QlTmXxo2naObDuGtw58YaxlOu0
JVNpbW9uIEpvc2Vmc3NvbiA8c2ltb25Aam9zZWZzc29uLm9yZz6IlgQTFggAPgIb
AwULCQgHAgYVCAkKCwIEFgIDAQIeAQIXgBYhBLHSvRN1vst4TPT4xNc89jjFPAa+
BQJl/YgIBQkLehFUAAoJENc89jjFPAa+CboA+wUa06RD5e5VTCxvSWtPS75Wq2qB
eYGZnf0jvUMxa2n4AP4xkUeAPPnNuMsTm2fsFCDIGaEM2Yn6Vb2huzzT1Fw/BLgz
BFySz4EWCSsGAQQB2kcPAQEHQOxTCIOaeXAxI2hIX4HK9bQTpNVei708oNr1Klm8
qCGKiPUEGBYIACYCGwIWIQSx0r0Tdb7LeEz0+MTXPPY4xTwGvgUCZf2IKwUJC3oQ
qgCBdiAEGRYIAB0WIQSjzJyHC50xCrrUzy9RcisI/kdFogUCXJLPgQAKCRBRcisI
/kdFoqdMAQCgH45aseZgIrwKOvUOA9QfsmeE8GZHYNuFHmM9FEQS6AD6A4x5aYvo
Y6lo98pgtw2HPDhmcCXFItjXCrV4A0GmJA4JENc89jjFPAa+GcYA/26YQY05bLtn
XiIjTiAzrGQrRXxTHPA8Av7TDFHvIetWAP9sHSoU8OfTwmTiEnGwLlsV7QJclZg3
YNz/Ypcp9TqQBrg4BFySz2oSCisGAQQBl1UBBQEBB0AxlRumDW6nZY7A+VCfek9V
pEx6PJmdJyYPt3lNHMd6HAMBCAeIfgQYFggAJgIbDBYhBLHSvRN1vst4TPT4xNc8
9jjFPAa+BQJl/YgwBQkLehDGAAoJENc89jjFPAa+phoA/jrDqIrl/55vUMBhIQv+
TP635d2iCTEnyFmbUcP9+gh6APoDsXalVd2cOGxQtSC+TF8PkZMn1TLkJKAjVxr+
xx40AgAKCRBRcisI/kdFomTdAQC+4zTYXyFaoKpJz6y5eDibYdCiEBH8MvprKbsy
cbxypQD+LHw00SsdaNqFS+BobG6nKLgMaD9PivJ4vi2Z4erNmww=
=VfiN
-----END PGP SIGNATURE-----


Ludovic Courtès wrote 1 weeks ago
(name . Simon Josefsson)(address . simon@josefsson.org)(address . 76343@debbugs.gnu.org)
87r03cajp9.fsf@gnu.org
Hi,

Simon Josefsson <simon@josefsson.org> skribis:

Toggle quote (5 lines)
> A shephard-specific patch would be the simplest at this point, I think.
>  
> Do you have some idea how to do that? I agree it seems like a Debian-
> specific patch for now.

The patch below appears to do the trick. I guess I could just as well
integrate it in the next 1.0.x bug-release.

Does it work for you?

Thanks,
Ludo’.
Toggle diff (30 lines)
diff --git a/modules/shepherd.scm b/modules/shepherd.scm
index d55373a..a35a415 100644
--- a/modules/shepherd.scm
+++ b/modules/shepherd.scm
@@ -515,7 +515,11 @@ fork in the child process."
;; stdout. Redirect stdout to the bitbucket so we
;; don't log twice.
(%make-void-port "w")
- (current-output-port)))))
+ (current-output-port))))
+
+ ;; In Guile 3.0.10, calling 'environ' from the top-level
+ ;; triggers a warning so do it from here.
+ (default-environment-variables (environ)))
(parameterize ((current-output-port (%current-service-output-port)))
(set-port-encoding! (log-output-port) "UTF-8")
diff --git a/modules/shepherd/service.scm b/modules/shepherd/service.scm
index 2d64897..c8667e6 100644
--- a/modules/shepherd/service.scm
+++ b/modules/shepherd/service.scm
@@ -1437,7 +1437,7 @@ background:~{ ~a~}."
(define default-environment-variables
;; The default list of environment variable name/value pairs that should be
;; set when starting a service.
- (make-parameter (environ)))
+ (make-parameter '()))
(define default-pid-file-timeout
;; Maximum number of seconds to wait for a PID file to show up.
Simon Josefsson wrote 1 weeks ago
(name . Ludovic Courtès)(address . ludo@gnu.org)(address . 76343@debbugs.gnu.org)
87tt88sr7w.fsf@josefsson.org
Ludovic Courtès <ludo@gnu.org> writes:

Toggle quote (14 lines)
> Hi,
>
> Simon Josefsson <simon@josefsson.org> skribis:
>
>> A shephard-specific patch would be the simplest at this point, I think.
>>  
>> Do you have some idea how to do that? I agree it seems like a Debian-
>> specific patch for now.
>
> The patch below appears to do the trick. I guess I could just as well
> integrate it in the next 1.0.x bug-release.
>
> Does it work for you?

It does, yes!


The only difference is your patch. I'll upload this eventually.

Thanks,
/Simon

Toggle quote (35 lines)
>
> Thanks,
> Ludo’.
>
> diff --git a/modules/shepherd.scm b/modules/shepherd.scm
> index d55373a..a35a415 100644
> --- a/modules/shepherd.scm
> +++ b/modules/shepherd.scm
> @@ -515,7 +515,11 @@ fork in the child process."
> ;; stdout. Redirect stdout to the bitbucket so we
> ;; don't log twice.
> (%make-void-port "w")
> - (current-output-port)))))
> + (current-output-port))))
> +
> + ;; In Guile 3.0.10, calling 'environ' from the top-level
> + ;; triggers a warning so do it from here.
> + (default-environment-variables (environ)))
>
> (parameterize ((current-output-port (%current-service-output-port)))
> (set-port-encoding! (log-output-port) "UTF-8")
> diff --git a/modules/shepherd/service.scm b/modules/shepherd/service.scm
> index 2d64897..c8667e6 100644
> --- a/modules/shepherd/service.scm
> +++ b/modules/shepherd/service.scm
> @@ -1437,7 +1437,7 @@ background:~{ ~a~}."
> (define default-environment-variables
> ;; The default list of environment variable name/value pairs that should be
> ;; set when starting a service.
> - (make-parameter (environ)))
> + (make-parameter '()))
>
> (define default-pid-file-timeout
> ;; Maximum number of seconds to wait for a PID file to show up.
>
-----BEGIN PGP SIGNATURE-----

iQNoBAEWCAMQFiEEo8ychwudMQq61M8vUXIrCP5HRaIFAmfHKDQUHHNpbW9uQGpv
c2Vmc3Nvbi5vcmfCHCYAmDMEXJLOtBYJKwYBBAHaRw8BAQdACIcrZIvhrxDBkK9f
V+QlTmXxo2naObDuGtw58YaxlOu0JVNpbW9uIEpvc2Vmc3NvbiA8c2ltb25Aam9z
ZWZzc29uLm9yZz6IlgQTFggAPgIbAwULCQgHAgYVCAkKCwIEFgIDAQIeAQIXgBYh
BLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgIBQkLehFUAAoJENc89jjFPAa+CboA
+wUa06RD5e5VTCxvSWtPS75Wq2qBeYGZnf0jvUMxa2n4AP4xkUeAPPnNuMsTm2fs
FCDIGaEM2Yn6Vb2huzzT1Fw/BLgzBFySz4EWCSsGAQQB2kcPAQEHQOxTCIOaeXAx
I2hIX4HK9bQTpNVei708oNr1Klm8qCGKiPUEGBYIACYCGwIWIQSx0r0Tdb7LeEz0
+MTXPPY4xTwGvgUCZf2IKwUJC3oQqgCBdiAEGRYIAB0WIQSjzJyHC50xCrrUzy9R
cisI/kdFogUCXJLPgQAKCRBRcisI/kdFoqdMAQCgH45aseZgIrwKOvUOA9QfsmeE
8GZHYNuFHmM9FEQS6AD6A4x5aYvoY6lo98pgtw2HPDhmcCXFItjXCrV4A0GmJA4J
ENc89jjFPAa+GcYA/26YQY05bLtnXiIjTiAzrGQrRXxTHPA8Av7TDFHvIetWAP9s
HSoU8OfTwmTiEnGwLlsV7QJclZg3YNz/Ypcp9TqQBrg4BFySz2oSCisGAQQBl1UB
BQEBB0AxlRumDW6nZY7A+VCfek9VpEx6PJmdJyYPt3lNHMd6HAMBCAeIfgQYFggA
JgIbDBYhBLHSvRN1vst4TPT4xNc89jjFPAa+BQJl/YgwBQkLehDGAAoJENc89jjF
PAa+phoA/jrDqIrl/55vUMBhIQv+TP635d2iCTEnyFmbUcP9+gh6APoDsXalVd2c
OGxQtSC+TF8PkZMn1TLkJKAjVxr+xx40AgAKCRBRcisI/kdFok4iAQDfCXWDyoIc
BM1fnuJWiYXvp2U1EPzDeLgOjG/MGP//FwEApZtT3DDJK6LURMO9VYcr/FgUcszk
Skb5W1qF/kgPpwg=
=nFvV
-----END PGP SIGNATURE-----

Ludovic Courtès wrote 6 days ago
(name . Simon Josefsson)(address . simon@josefsson.org)(address . 76343-done@debbugs.gnu.org)
875xkmxjru.fsf@gnu.org
Simon Josefsson <simon@josefsson.org> skribis:

Toggle quote (18 lines)
> Ludovic Courtès <ludo@gnu.org> writes:
>
>> Hi,
>>
>> Simon Josefsson <simon@josefsson.org> skribis:
>>
>>> A shephard-specific patch would be the simplest at this point, I think.
>>>  
>>> Do you have some idea how to do that? I agree it seems like a Debian-
>>> specific patch for now.
>>
>> The patch below appears to do the trick. I guess I could just as well
>> integrate it in the next 1.0.x bug-release.
>>
>> Does it work for you?
>
> It does, yes!

Excellent. :-)

Pushed in the Shepherd as 8e951de13120729907c527d4a420b579aec944f4.

Thanks!

Ludo’.
Closed
?
Your comment

Commenting via the web interface is currently disabled.

To comment on this conversation send an email to 76343@debbugs.gnu.org

To respond to this issue using the mumi CLI, first switch to it
mumi current 76343
Then, you may apply the latest patchset in this issue (with sign off)
mumi am -- -s
Or, compose a reply to this issue
mumi compose
Or, send patches to this issue
mumi send-email *.patch
You may also tag this issue. See list of standard tags. For example, to set the confirmed and easy tags
mumi command -t +confirmed -t +easy
Or, remove the moreinfo tag and set the help tag
mumi command -t -moreinfo -t +help